--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
 <!-- Your code here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="company.css" />
+    <link rel="stylesheet" type="text/css" href="engineering-department.css" />
+    <link rel="stylesheet" type="text/css" href="project-x-launch.css" />
+    <link rel="stylesheet" type="text/css" href="typography.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+
+    <title>Cat Perry's Favorite Cats</title>
+</head>
+<body>
+    
+</body>
+</html>
